--- a/mariokart_top_level.qsf
+++ b/mariokart_top_level.qsf
@@ -71,12 +71,6 @@ set_global_assignment -name HEX_FILE small_mario_glyphs.hex
 set_global_assignment -name HEX_FILE obstacle.hex
 set_global_assignment -name HEX_FILE data.hex
 set_global_assignment -name HEX_FILE opcodes.hex
-set_location_assignment PIN_D11 -to vga_vs
-set_location_assignment PIN_B11 -to vga_hs
-set_location_assignment PIN_A11 -to vga_clk
-set_location_assignment PIN_F10 -to vga_blank_n
-set_location_assignment PIN_AA14 -to reset
-set_location_assignment PIN_AF14 -to clock
 set_location_assignment PIN_A13 -to r[0]
 set_location_assignment PIN_C13 -to r[1]
 set_location_assignment PIN_E13 -to r[2]
@@ -93,6 +87,7 @@ set_location_assignment PIN_G11 -to g[4]
 set_location_assignment PIN_G12 -to g[5]
 set_location_assignment PIN_F11 -to g[6]
 set_location_assignment PIN_E11 -to g[7]
+set_location_assignment PIN_AF14 -to clock
 set_location_assignment PIN_B13 -to b[0]
 set_location_assignment PIN_G13 -to b[1]
 set_location_assignment PIN_H13 -to b[2]
@@ -101,10 +96,50 @@ set_location_assignment PIN_H14 -to b[4]
 set_location_assignment PIN_F15 -to b[5]
 set_location_assignment PIN_G15 -to b[6]
 set_location_assignment PIN_J14 -to b[7]
+set_location_assignment PIN_F10 -to vga_blank_n
+set_location_assignment PIN_A11 -to vga_clk
+set_location_assignment PIN_B11 -to vga_hs
+set_location_assignment PIN_D11 -to vga_vs
+set_location_assignment PIN_AB12 -to reset
+set_location_assignment PIN_Y16 -to up_button
+set_location_assignment PIN_W15 -to down_button
+set_location_assignment PIN_AA15 -to left_button
+set_location_assignment PIN_AA14 -to right_button
 set_global_assignment -name VERILOG_FILE pulse.v
 set_global_assignment -name VERILOG_FILE registerKris.v
 set_global_assignment -name VERILOG_FILE clock_divider.v
 set_global_assignment -name HEX_FILE udest.hex
 set_global_assignment -name HEX_FILE irtest.hex
-set_global_assignment -name VERILOG_FILE background_bitgen.v
+set_global_assignment -name HEX_FILE smallTrackMiddle.hex
+set_global_assignment -name HEX_FILE marioBorder.hex
+set_global_assignment -name HEX_FILE smallTrack.hex
+set_global_assignment -name HEX_FILE smallTrackTurnLeftBorder.hex
+set_global_assignment -name HEX_FILE smallTrackTurnRightBorder.hex
+set_global_assignment -name HEX_FILE smallTrackMiddleLeftBorder.hex
+set_global_assignment -name HEX_FILE smallTrackMiddleRightBorder.hex
+set_global_assignment -name HEX_FILE bigMarioKart.hex
+set_global_assignment -name VHDL_FILE Pixel_On_Text2.vhd -hdl_version VHDL_1993
+set_global_assignment -name VHDL_FILE commonPak.vhd -hdl_version VHDL_1993
+set_global_assignment -name VHDL_FILE Font_Rom.vhd -hdl_version VHDL_1993
+set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity Pixel_On_Text2.vhd
+set_global_assignment -name EDA_INPUT_GND_NAME GND -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity commonPak.vhd
+set_global_assignment -name EDA_INPUT_GND_NAME GND -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity commonPak.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity Font_Rom.vhd
+set_global_assignment -name EDA_INPUT_GND_NAME GND -entity Font_Rom.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity Font_Rom.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity Font_Rom.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity Font_Rom.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity Font_Rom.vhd -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity Font_Rom.vhd -section_id eda_design_synthesis
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
