--- a/mariokart_top_level.qsf
+++ b/mariokart_top_level.qsf
@@ -49,28 +49,9 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name VERILOG_FILE mariokart_top_level.v
-set_global_assignment -name VERILOG_FILE vga.v
-set_global_assignment -name VERILOG_FILE vga_control.v
-set_global_assignment -name VERILOG_FILE tb_mariokart_top_level.v
-set_global_assignment -name VERILOG_FILE register.v
-set_global_assignment -name VERILOG_FILE program_counter.v
-set_global_assignment -name VERILOG_FILE mux.v
-set_global_assignment -name VERILOG_FILE glyph_rom.v
-set_global_assignment -name VERILOG_FILE glyph_bitgen.v
-set_global_assignment -name VERILOG_FILE glyph_addr_gen.v
-set_global_assignment -name VERILOG_FILE fsm_v3.v
-set_global_assignment -name VERILOG_FILE datapath.v
-set_global_assignment -name VERILOG_FILE bram.v
-set_global_assignment -name VERILOG_FILE bitgen.v
-set_global_assignment -name VERILOG_FILE alu.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name HEX_FILE small_mario_glyphs.hex
-set_global_assignment -name HEX_FILE obstacle.hex
-set_global_assignment -name HEX_FILE data.hex
-set_global_assignment -name HEX_FILE opcodes.hex
 set_location_assignment PIN_A13 -to r[0]
 set_location_assignment PIN_C13 -to r[1]
 set_location_assignment PIN_E13 -to r[2]
@@ -105,22 +86,6 @@ set_location_assignment PIN_Y16 -to up_button
 set_location_assignment PIN_W15 -to down_button
 set_location_assignment PIN_AA15 -to left_button
 set_location_assignment PIN_AA14 -to right_button
-set_global_assignment -name VERILOG_FILE pulse.v
-set_global_assignment -name VERILOG_FILE registerKris.v
-set_global_assignment -name VERILOG_FILE clock_divider.v
-set_global_assignment -name HEX_FILE udest.hex
-set_global_assignment -name HEX_FILE irtest.hex
-set_global_assignment -name HEX_FILE smallTrackMiddle.hex
-set_global_assignment -name HEX_FILE marioBorder.hex
-set_global_assignment -name HEX_FILE smallTrack.hex
-set_global_assignment -name HEX_FILE smallTrackTurnLeftBorder.hex
-set_global_assignment -name HEX_FILE smallTrackTurnRightBorder.hex
-set_global_assignment -name HEX_FILE smallTrackMiddleLeftBorder.hex
-set_global_assignment -name HEX_FILE smallTrackMiddleRightBorder.hex
-set_global_assignment -name HEX_FILE bigMarioKart.hex
-set_global_assignment -name VHDL_FILE Pixel_On_Text2.vhd -hdl_version VHDL_1993
-set_global_assignment -name VHDL_FILE commonPak.vhd -hdl_version VHDL_1993
-set_global_assignment -name VHDL_FILE Font_Rom.vhd -hdl_version VHDL_1993
 set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity Pixel_On_Text2.vhd
 set_global_assignment -name EDA_INPUT_GND_NAME GND -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity Pixel_On_Text2.vhd -section_id eda_design_synthesis
@@ -142,4 +107,50 @@ set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity Font_Rom.vhd -sectio
 set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity Font_Rom.vhd -section_id eda_design_synthesis
 set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity Font_Rom.vhd -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity Font_Rom.vhd -section_id eda_design_synthesis
+
+set_global_assignment -name VERILOG_FILE "../ECE_3710_Lab/ECE3710-Lab/bcd_to_sev_seg.v"
+set_global_assignment -name VERILOG_FILE mariokart_top_level.v
+set_global_assignment -name VERILOG_FILE vga.v
+set_global_assignment -name VERILOG_FILE vga_control.v
+set_global_assignment -name VERILOG_FILE tb_mariokart_top_level.v
+set_global_assignment -name VERILOG_FILE register.v
+set_global_assignment -name VERILOG_FILE program_counter.v
+set_global_assignment -name VERILOG_FILE mux.v
+set_global_assignment -name VERILOG_FILE glyph_rom.v
+set_global_assignment -name VERILOG_FILE glyph_bitgen.v
+set_global_assignment -name VERILOG_FILE glyph_addr_gen.v
+set_global_assignment -name VERILOG_FILE fsm_v3.v
+set_global_assignment -name VERILOG_FILE datapath.v
+set_global_assignment -name VERILOG_FILE bram.v
+set_global_assignment -name VERILOG_FILE bitgen.v
+set_global_assignment -name VERILOG_FILE alu.v
+set_global_assignment -name HEX_FILE small_mario_glyphs.hex
+set_global_assignment -name HEX_FILE obstacle.hex
+set_global_assignment -name HEX_FILE data.hex
+set_global_assignment -name HEX_FILE opcodes.hex
+set_global_assignment -name VERILOG_FILE pulse.v
+set_global_assignment -name VERILOG_FILE registerKris.v
+set_global_assignment -name VERILOG_FILE clock_divider.v
+set_global_assignment -name HEX_FILE udest.hex
+set_global_assignment -name HEX_FILE irtest.hex
+set_global_assignment -name HEX_FILE smallTrackMiddle.hex
+set_global_assignment -name HEX_FILE marioBorder.hex
+set_global_assignment -name HEX_FILE smallTrack.hex
+set_global_assignment -name HEX_FILE smallTrackTurnLeftBorder.hex
+set_global_assignment -name HEX_FILE smallTrackTurnRightBorder.hex
+set_global_assignment -name HEX_FILE smallTrackMiddleLeftBorder.hex
+set_global_assignment -name HEX_FILE smallTrackMiddleRightBorder.hex
+set_global_assignment -name HEX_FILE bigMarioKart.hex
+set_global_assignment -name VHDL_FILE Pixel_On_Text2.vhd -hdl_version VHDL_1993
+set_global_assignment -name VHDL_FILE commonPak.vhd -hdl_version VHDL_1993
+set_global_assignment -name VHDL_FILE Font_Rom.vhd -hdl_version VHDL_1993
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_location_assignment PIN_AE26 -to sev_seg[0]
+set_location_assignment PIN_AE27 -to sev_seg[1]
+set_location_assignment PIN_AE28 -to sev_seg[2]
+set_location_assignment PIN_AG27 -to sev_seg[3]
+set_location_assignment PIN_AF28 -to sev_seg[4]
+set_location_assignment PIN_AG28 -to sev_seg[5]
+set_location_assignment PIN_AH28 -to sev_seg[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
